// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GIFI - register as a component > should show dialog 1`] = `
<div
  data-v-app=""
>
  
  <h1
    class="listtop"
    data-v-dcfeeef6=""
  >
    Configure GIFI codes
  </h1>
  
  <div>
    <table
      class="dynatable"
    >
      <thead>
        <tr>
          <!--v-if-->
          
          <th>
            Code
          </th>
          <th>
            Description
          </th>
          
          <th />
        </tr>
      </thead>
      
      <tbody
        class="dynatableData"
      >
        
        
        <!-- eslint-disable prettier/prettier -->
        <tr
          class="data-row"
        >
          <!--v-if-->
          
          <td
            class="data-entry"
          >
            <input
              class="neutral input-box"
              name="accno"
              readonly=""
              type="text"
              value="0000"
            />
          </td>
          <td
            class="data-entry"
          >
            <input
              class="neutral input-box"
              name="description"
              readonly=""
              type="text"
              value="Dummy account"
            />
          </td>
          
          <td>
            <!--v-if-->
            <!--v-if-->
          </td>
        </tr>
        
        
        <!-- eslint-disable prettier/prettier -->
        <tr
          class="data-row"
        >
          <!--v-if-->
          
          <td
            class="data-entry"
          >
            <input
              class="neutral input-box"
              name="accno"
              readonly=""
              type="text"
              value="0001"
            />
          </td>
          <td
            class="data-entry"
          >
            <input
              class="neutral input-box"
              name="description"
              readonly=""
              type="text"
              value="Dummy account 1"
            />
          </td>
          
          <td>
            <!--v-if-->
            <!--v-if-->
          </td>
        </tr>
        
        
      </tbody>
      <!--v-if-->
      
    </table>
  </div>
  <div>
    <span>
      Download: 
    </span>
    
    <span>
      <a
        href="http://localhost:3000/erp/api/v0/gl/gifi?format=HTML"
        target="_blank"
      >
        [ HTML ]
      </a>
    </span>
    
  </div>
  
  <div
    class="import-section"
    data-v-dcfeeef6=""
  >
    <h2
      class="listheading"
      data-v-dcfeeef6=""
    >
      Import
    </h2>
    <div
      data-v-0e53fdf3=""
      data-v-dcfeeef6=""
      id="import-gifi"
    >
      
      <!-- eslint-disable prettier/prettier -->
      <div
        data-v-0e53fdf3=""
        data-v-58373c58=""
        id="gifi"
      >
        <!--v-if-->
        <form
          data-v-58373c58=""
          name="csvupload"
        >
          <input
            data-v-58373c58=""
            name="type"
            type="hidden"
            value="gifi"
          />
          <!--v-if-->
          <div
            class="non-grid"
            data-v-58373c58=""
            style="width: fit-content;"
          >
            <!--v-if-->
            <div
              data-v-58373c58=""
            >
              <label>
                From File
              </label>
              <span>
                <input
                  accept=".csv"
                  name="import_file"
                  required=""
                  type="file"
                />
              </span>
            </div>
          </div>
          <div
            class="inputrow non-grid"
            data-v-58373c58=""
            id="buttonrow"
          >
            <input
              data-v-58373c58=""
              name="trans_type"
              type="hidden"
            />
            <button
              class="submit"
              data-v-58373c58=""
              disabled=""
              name="action"
            >
              
              Save
              
            </button>
          </div>
          <div
            class="details"
            data-v-58373c58=""
          >
            
             The following fields are expected (in this order): 
            <dl
              data-v-0e53fdf3=""
            >
              <dt
                data-v-0e53fdf3=""
              >
                accno
              </dt>
              <dd
                data-v-0e53fdf3=""
              />
              <dt
                data-v-0e53fdf3=""
              >
                description
              </dt>
              <dd
                data-v-0e53fdf3=""
              />
            </dl>
            
          </div>
        </form>
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`GIFI - register as a component > should show dialog with editable data 1`] = `
<div
  data-v-app=""
>
  
  <h1
    class="listtop"
    data-v-dcfeeef6=""
  >
    Configure GIFI codes
  </h1>
  
  <div>
    <table
      class="dynatable"
    >
      <thead>
        <tr>
          <!--v-if-->
          
          <th>
            Code
          </th>
          <th>
            Description
          </th>
          
          <th />
        </tr>
      </thead>
      
      <tbody
        class="dynatableData"
      >
        
        
        <!-- eslint-disable prettier/prettier -->
        <tr
          class="data-row"
        >
          <!--v-if-->
          
          <td
            class="data-entry"
          >
            <input
              class="neutral input-box"
              name="accno"
              readonly=""
              type="text"
              value="0000"
            />
          </td>
          <td
            class="data-entry"
          >
            <input
              class="neutral input-box"
              name="description"
              readonly=""
              type="text"
              value="Dummy account"
            />
          </td>
          
          <td>
            
            <button
              name="modify"
            >
              
              Modify
              
            </button>
            <button
              disabled=""
              name="save"
            >
              
              Save
              
            </button>
            <button
              disabled=""
              name="cancel"
            >
              
              Cancel
              
            </button>
            <!--v-if-->
            
            <!--v-if-->
          </td>
        </tr>
        
        
        <!-- eslint-disable prettier/prettier -->
        <tr
          class="data-row"
        >
          <!--v-if-->
          
          <td
            class="data-entry"
          >
            <input
              class="neutral input-box"
              name="accno"
              readonly=""
              type="text"
              value="0001"
            />
          </td>
          <td
            class="data-entry"
          >
            <input
              class="neutral input-box"
              name="description"
              readonly=""
              type="text"
              value="Dummy account 1"
            />
          </td>
          
          <td>
            
            <button
              name="modify"
            >
              
              Modify
              
            </button>
            <button
              disabled=""
              name="save"
            >
              
              Save
              
            </button>
            <button
              disabled=""
              name="cancel"
            >
              
              Cancel
              
            </button>
            <!--v-if-->
            
            <!--v-if-->
          </td>
        </tr>
        
        
      </tbody>
      <!--v-if-->
      
    </table>
  </div>
  <div>
    <span>
      Download: 
    </span>
    
    <span>
      <a
        href="http://localhost:3000/erp/api/v0/gl/gifi?format=HTML"
        target="_blank"
      >
        [ HTML ]
      </a>
    </span>
    
  </div>
  
  <div
    class="import-section"
    data-v-dcfeeef6=""
  >
    <h2
      class="listheading"
      data-v-dcfeeef6=""
    >
      Import
    </h2>
    <div
      data-v-0e53fdf3=""
      data-v-dcfeeef6=""
      id="import-gifi"
    >
      
      <!-- eslint-disable prettier/prettier -->
      <div
        data-v-0e53fdf3=""
        data-v-58373c58=""
        id="gifi"
      >
        <!--v-if-->
        <form
          data-v-58373c58=""
          name="csvupload"
        >
          <input
            data-v-58373c58=""
            name="type"
            type="hidden"
            value="gifi"
          />
          <!--v-if-->
          <div
            class="non-grid"
            data-v-58373c58=""
            style="width: fit-content;"
          >
            <!--v-if-->
            <div
              data-v-58373c58=""
            >
              <label>
                From File
              </label>
              <span>
                <input
                  accept=".csv"
                  name="import_file"
                  required=""
                  type="file"
                />
              </span>
            </div>
          </div>
          <div
            class="inputrow non-grid"
            data-v-58373c58=""
            id="buttonrow"
          >
            <input
              data-v-58373c58=""
              name="trans_type"
              type="hidden"
            />
            <button
              class="submit"
              data-v-58373c58=""
              disabled=""
              name="action"
            >
              
              Save
              
            </button>
          </div>
          <div
            class="details"
            data-v-58373c58=""
          >
            
             The following fields are expected (in this order): 
            <dl
              data-v-0e53fdf3=""
            >
              <dt
                data-v-0e53fdf3=""
              >
                accno
              </dt>
              <dd
                data-v-0e53fdf3=""
              />
              <dt
                data-v-0e53fdf3=""
              >
                description
              </dt>
              <dd
                data-v-0e53fdf3=""
              />
            </dl>
            
          </div>
        </form>
      </div>
      
    </div>
  </div>
  
</div>
`;
